Switched incorrect return value for range() example

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ _::zip($names, $ages, $leaders);
 
 <p class="block" id="range"><b class="function">range</b> <code>_::range([start], stop, [step])</code></p>
 <p>Returns an array of integers from <b>start</b> to <b>stop</b> (exclusive) by <b>step</b>. Defaults: <b>start</b>=0, <b>step</b>=1.</p>
-<pre>_::range(10);         // array(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10)
+<pre>_::range(10);         // array(0, 1, 2, 3, 4, 5, 6, 7, 8, 9)
 _::range(1, 5);       // array(1, 2, 3, 4)
 _::range(0, 30, 5);   // array(0, 5, 10, 15, 20, 25)
 _::range(0, -5, -1);  // array(0, -1, -2, -3, -4)
