Added link to tests

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <span class="small">by <a href="http://github.com/brianhaveri">brianhaveri</a></span></h1>
 
     <nav>
-      <p><a href="http://github.com/brianhaveri/Underscore.php">Underscore.php</a> is a PHP port of the popular <a href="http://documentcloud.github.com/underscore/">Underscore.js</a> library. In addition to porting Underscore's functionality, Underscore.php includes matching unit tests.</p>
+      <p><a href="http://github.com/brianhaveri/Underscore.php">Underscore.php</a> is a PHP port of the popular <a href="http://documentcloud.github.com/underscore/">Underscore.js</a> library. In addition to porting Underscore's functionality, Underscore.php includes <a href="https://github.com/brianhaveri/Underscore.php/tree/master/test">matching unit tests</a>.</p>
       <p>Underscore.php is <a href="http://github.com/brianhaveri/Underscore.php">hosted on GitHub</a> and open sourced under the MIT license.</p>
     </nav>
       
