--- a/index.html
+++ b/index.html
@@ -213,12 +213,12 @@ $flat = _::reduceRight($list, function($a, $b) { return array_merge($a, $b); }, 
 <p>Return the values in the collection that fail the truth iterator test.</p>
 <pre>_::reject(array(1, 2, 3, 4), function($num) { return $num % 2 === 0; }); // array(1, 3)</pre>
 
-<p class="block" id="select"><b class="function">all</b> <code>_::all(collection, iterator)</code></p>
+<p class="block" id="all"><b class="function">all</b> <code>_::all(collection, iterator)</code></p>
 <p>Returns true if all values in the collection pass the truth iterator test.</p>
 <pre>_::all(array(1, 2, 3, 4), function($num) { return $num % 2 === 0; }); // false
 _::all(array(1, 2, 3, 4), function($num) { return $num < 5; }); // true</pre>
 
-<p class="block" id="select"><b class="function">any</b> <code>_::any(collection, iterator)</code></p>
+<p class="block" id="any"><b class="function">any</b> <code>_::any(collection, iterator)</code></p>
 <p>Returns true if any values in the collection pass the truth iterator test.</p>
 <pre>_::any(array(1, 2, 3, 4), function($num) { return $num % 2 === 0; }); // true
 _::any(array(1, 2, 3, 4), function($num) { return $num === 5; }); // false</pre>
@@ -567,6 +567,10 @@ $result = _($numbers)->chain()
   ->reject(function($n) { return $n === 3; })
   ->sortBy(function($n) { return -$n; })
   ->value(); // array(4, 2, 1)</pre>
+
+<p class="block" id="value"><b class="function">value</b> <code>_(obj)->value()</code></p>
+<p>Extracts the value of a wrapped object.</p>
+<pre>_(array(1, 2, 3))->value(); // array(1, 2, 3)</pre>
 
 
 <h2>Author</h2>
