--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@ __::first(array(5, 4, 3, 2, 1), 3); // array(5, 4, 3)</pre>
 <p>Returns a copy of the array with all instances of <b>values</b> removed. === is used for equality testing. Keys are maintained.</p>
 <pre>__::without(array(5, 4, 3, 2, 1), 3, 2); // array(5, 4, 4=>1)</pre>
 
-<p class="block" id="uniq"><b class="function">uniq</b> <code>__::uniq(array)</code> <span class="alias">Alias: <b>unique</b></span></p>
-<p>Returns a copy of the array containing no duplicate values. Unlike Underscore.js, Underscore.php does not accept a second isSorted parameter.</p>
+<p class="block" id="uniq"><b class="function">uniq</b> <code>__::uniq(array, [isSorted [, iterator]])</code> <span class="alias">Alias: <b>unique</b></span></p>
+<p>Returns a copy of the array containing no duplicate values. Unlike Underscore.js, passing isSorted does not currently affect the performance of <code>uniq</code>. You can optionally compute uniqueness by passing an iterator function.</p>
 <pre>__::uniq(array(2, 2, 4, 4, 4, 1, 1, 1)); // array(2, 4, 1)</pre>
 
 <p class="block" id="union"><b class="function">union</b> <code>__::union(*arrays)</code></p>
