Fixed typo in docs for functions

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ $welcome(); // 'hi: moe!'</pre>
 <pre>
 class Stooge {
   public function getName() { return 'moe'; }
-  public function getAge() { return 40'; }
+  public function getAge() { return 40; }
 }
 $stooge = new Stooge;
 __::functions($stooge); // array('getName', 'getAge')</pre>
