--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
       <h3>Arrays</h3>
       <p>
         <a href="#first">first</a>,
+        <a href="#initial">initial</a>,
         <a href="#rest">rest</a>,
         <a href="#last">last</a>,
         <a href="#compact">compact</a>,
@@ -304,6 +305,11 @@ __::size($stooge); // 2</pre>
 <p>Get the first element of an array. Passing n returns the first n elements.</p>
 <pre>__::first(array(5, 4, 3, 2, 1)); // 5
 __::first(array(5, 4, 3, 2, 1), 3); // array(5, 4, 3)</pre>
+
+<p class="block" id="initial"><b class="function">initial</b> <code>__::initial(array, [n])</code></span></p>
+<p>Get everything but the last array element. Passing n excludes the last n elements.</p>
+<pre>__::initial(array(5, 4, 3, 2, 1)); // array(5, 4, 3, 2)
+__::initial(array(5, 4, 3, 2, 1), 3); // array(5, 4)</pre>
 
 <p class="block" id="rest"><b class="function">rest</b> <code>__::rest(array, [index])</code> <span class="alias">Alias: <b>tail</b></span></p>
 <p>Get the rest of the array elements. Passing an index returns from that index onward.</p>
